# credible-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEBTSTACK_API_DESIGN.md  Dockerfile  HANDOFF.md  README.md  WORKPLAN.md  alembic.ini  docker-compose.yml  pytest.ini  railway.json  railway.toml  requirements-dev.txt  requirements.txt  tier7_fixes.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_ownership_links.py  (+25 more)
app/: __init__.py  main.py
demos/: agent_demo.py  agent_demo_offline.py  agent_integration.py  api_demo.py
docs/: ACCOUNT_SETUP.md  AGENT_EXAMPLES.md  BOND_PRICING.md  DEBT_COVERAGE_HISTORY.md  DEMO_SCENARIOS.md  DISTRIBUTION_PLAYBOOK.md  DOCUMENT_STORAGE_DESIGN.md  DOCUMENT_STORAGE_DESIGN_V2.md  EVAL_FRAMEWORK.md  EXTRACTION_MODIFICATIONS.md  FINANCIAL_QC_TEST_PLAN.md  OWNERSHIP_EXTRACTION.md  PLAYBOOK_UPDATE_NOTES.md  PRICING_STRATEGY.md  PRIMITIVES_API_SPEC.md  PRIMITIVE_GAP_ANALYSIS.md  QA_TROUBLESHOOTING.md  README.md
medici/: CLAUDE.md  README.md  ROADMAP.md
scripts/: analyze_bond_coverage.py  analyze_cf_gaps.py  analyze_debt_docs_coverage.py  analyze_document_coverage.py  analyze_excess.py  analyze_excess_detail.py  analyze_gaps.py  analyze_gaps_v2.py  analyze_indenture_identifiers.py  analyze_match_gap.py  analyze_missing.py  analyze_missing_collateral.py  analyze_missing_v2.py  analyze_remaining.py  analyze_secured_debt.py  analyze_unlinked.py  audit_covenant_relationships.py  audit_ownership.py  backfill_all_quarters.py  backfill_amounts_from_docs.py  backfill_covenant_source_docs.py  backfill_debt_document_links.py  backfill_document_sections.py  backfill_extraction_metadata.py  backfill_finnhub_amounts.py  backfill_historical_pricing.py  backfill_issue_dates.py  backfill_missing_docs.py  backfill_outstanding_from_filings.py  backfill_pricing_history.py  backfill_remaining.py  backfill_sec_urls.py  backfill_treasury_yields.py  batch_extract.py  batch_extract_financials.py  batch_extract_guarantees.py  batch_extract_missing.py  batch_extract_secured_data.py  batch_extract_ttm.py  batch_index.py  (+115 more)
sdk/: README.md  pyproject.toml  server.json
sdk/debtstack/: __init__.py  client.py  langchain.py  mcp_server.py
tests/: __init__.py  conftest.py
(+111 files in other folders)
