[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debtstack-ai"
version = "0.1.2"
description = "Corporate credit data API for AI agents"
readme = "README.md"
authors = [{name = "DebtStack.ai", email = "hello@debtstack.ai"}]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["credit", "debt", "bonds", "finance", "api", "ai", "agents", "langchain"]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "respx>=0.20",
]
langchain = [
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index>=0.10.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
debtstack-mcp = "debtstack.mcp_server:run"

[project.urls]
Homepage = "https://debtstack.ai"
Documentation = "https://docs.debtstack.ai"
Repository = "https://github.com/debtstack-ai/debtstack-python"
Issues = "https://github.com/debtstack-ai/debtstack-python/issues"
Changelog = "https://github.com/debtstack-ai/debtstack-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["debtstack*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
